--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 body {
 	background: #fff;
-	font-family: 'PT Serif', serif;
+	font-family: "Courier New", Courier, monospace;
 	font-weight:400;
 	font-size: 20px;
 	line-height: 1.4em;
